--- a/bbb.io-kernel/suite/buster/debian/changelog
+++ b/bbb.io-kernel/suite/buster/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20230718.0-0~buster+20230718) buster; urgency=low
+bbb.io-kernel (1.20230719.0-0~buster+20230719) buster; urgency=low
 
   * Kernel Updates
-  * linux-image-6.5.0-rc2-bone2
+  * linux-image-6.1.33-ti-r7
+  * linux-image-6.1.33-ti-rt-r7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 18 Jul 2023 09:56:21 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 19 Jul 2023 11:34:49 -0500
 
