--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,6 +1,8 @@
-bbb.io-kernel (1.20230718.0-0~focal+20230718) focal; urgency=low
+bbb.io-kernel (1.20230719.0-0~focal+20230719) focal; urgency=low
 
   * Kernel Updates
+  * linux-image-6.1.33-ti-r7
+  * linux-image-6.1.33-ti-rt-r7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 18 Jul 2023 09:56:21 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 19 Jul 2023 11:34:49 -0500
 
