--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/bookworm/debian/changelog
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2004-2204/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-bb-u-boot-am335x-evm (2022.04.20220602.2-0~jammy+20230804) jammy; urgency=low
+bb-u-boot-am335x-evm (2022.04.20220602.2-0~bookworm+20230804) bookworm; urgency=low
 
   * Rebuild for repos.rcn-ee.com
 
