--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,8 +1,21 @@
-bbb.io-kernel (1.20240119.0-0~bullseye+20240119) bullseye; urgency=low
+bbb.io-kernel (1.20240122.0-0~bullseye+20240122) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.69-ti-r21
-  * linux-image-6.1.69-ti-rt-r21
+  * linux-image-5.10.168-ti-r76
+  * linux-image-5.10.168-ti-rt-r76
+  * linux-image-6.1.73-armv7-lpae-x6
+  * linux-image-6.1.73-armv7-rt-x6
+  * linux-image-6.1.73-armv7-x6
+  * linux-image-6.1.73-bone-rt-r29
+  * linux-image-6.2.16-bone20
+  * linux-image-6.3.13-bone30
+  * linux-image-6.4.16-bone22
+  * linux-image-6.5.13-bone15
+  * linux-image-6.6.12-armv7-lpae-x7
+  * linux-image-6.6.12-armv7-rt-x7
+  * linux-image-6.6.12-armv7-x7
+  * linux-image-6.6.12-bone7
+  * linux-image-6.6.12-bone-rt-r7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 19 Jan 2024 10:17:01 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 22 Jan 2024 11:06:03 -0600
 
