--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,8 +1,15 @@
-bbb.io-kernel (1.20240206.0-0~bullseye+20240206) bullseye; urgency=low
+bbb.io-kernel (1.20240220.0-0~bullseye+20240220) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.7.4-bone12
-  * linux-image-6.8.0-rc3-bone3
+  * linux-image-6.1.69-ti-r25
+  * linux-image-6.1.69-ti-rt-r25
+  * linux-image-6.6.15-armv7-lpae-x8
+  * linux-image-6.6.15-armv7-rt-x8
+  * linux-image-6.6.15-armv7-x8
+  * linux-image-6.6.15-bone8
+  * linux-image-6.6.15-bone-rt-r8
+  * linux-image-6.7.5-bone13
+  * linux-image-6.8.0-rc5-bone4
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 06 Feb 2024 20:16:36 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 20 Feb 2024 12:34:30 -0600
 
