--- a/debian-12-libell/suite/bookworm/debian/changelog
+++ b/debian-12-libell/suite/bookworm/debian/changelog
@@ -1,8 +1,28 @@
-ell (0.61-1bbbio0~bookworm+20231207) bookworm; urgency=low
+ell (0.63-1bbbio0~bookworm+20240314) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild ell_0.63-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 07 Dec 2023 17:04:00 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 14 Mar 2024 10:57:47 -0500
+
+ell (0.63-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 28 Feb 2024 07:44:41 +0100
+
+ell (0.62-2) unstable; urgency=medium
+
+  * update symbols: added 5 symbols
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sun, 11 Feb 2024 19:16:57 +0100
+
+ell (0.62-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sun, 11 Feb 2024 19:09:19 +0100
 
 ell (0.61-1) unstable; urgency=medium
 
