--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,10 +1,25 @@
-bbb.io-kernel (1.20240321.0-0~focal+20240321) focal; urgency=low
+bbb.io-kernel (1.20240322.0-0~focal+20240322) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-6.2.16-bone21
-  * linux-image-6.3.13-bone31
-  * linux-image-6.4.16-bone23
-  * linux-image-6.5.13-bone16
+  * linux-image-5.10.212-armv7-lpae-x78
+  * linux-image-5.10.212-armv7-rt-x78
+  * linux-image-5.10.212-armv7-x78
+  * linux-image-5.10.212-bone78
+  * linux-image-5.10.212-bone-rt-r78
+  * linux-image-5.15.148-armv7-lpae-x42
+  * linux-image-5.15.148-armv7-rt-x42
+  * linux-image-5.15.148-armv7-x42
+  * linux-image-5.15.148-bone42
+  * linux-image-5.15.148-bone-rt-r42
+  * linux-image-6.1.80-ti-r34
+  * linux-image-6.1.80-ti-rt-r34
+  * linux-image-6.6.21-armv7-lpae-x12
+  * linux-image-6.6.21-armv7-rt-x12
+  * linux-image-6.6.21-armv7-x12
+  * linux-image-6.6.21-bone12
+  * linux-image-6.6.21-bone-rt-r12
+  * linux-image-6.7.10-bone17
+  * linux-image-6.8.1-bone8
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 21 Mar 2024 09:07:31 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 22 Mar 2024 11:28:04 -0500
 
