--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,25 +1,7 @@
-bbb.io-kernel (1.20240322.0-0~noble+20240322) noble; urgency=low
+bbb.io-kernel (1.20240326.0-0~noble+20240326) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.212-armv7-lpae-x78
-  * linux-image-5.10.212-armv7-rt-x78
-  * linux-image-5.10.212-armv7-x78
-  * linux-image-5.10.212-bone78
-  * linux-image-5.10.212-bone-rt-r78
-  * linux-image-5.15.148-armv7-lpae-x42
-  * linux-image-5.15.148-armv7-rt-x42
-  * linux-image-5.15.148-armv7-x42
-  * linux-image-5.15.148-bone42
-  * linux-image-5.15.148-bone-rt-r42
-  * linux-image-6.1.80-ti-r34
-  * linux-image-6.1.80-ti-rt-r34
-  * linux-image-6.6.21-armv7-lpae-x12
-  * linux-image-6.6.21-armv7-rt-x12
-  * linux-image-6.6.21-armv7-x12
-  * linux-image-6.6.21-bone12
-  * linux-image-6.6.21-bone-rt-r12
-  * linux-image-6.7.10-bone17
-  * linux-image-6.8.1-bone8
+  * linux-image-6.9.0-rc1-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 22 Mar 2024 11:28:04 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 26 Mar 2024 09:03:27 -0500
 
